feature: create capacity group entities
